--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,17 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        ports:
+            - 889:80
+        environment:
+            PMA_HOST: mysql
+            PMA_PORT: 3306
+        networks:
+            - sail
+        depends_on:
+            - mysql
 networks:
     sail:
         driver: bridge
